[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
validator = { version = "0.20.0", features = ["derive"] }
