[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
futures = "0.3.32"
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros" ] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["process", "rt-multi-thread"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3"
validator = { version = "0.20.0", features = ["derive"] }
